--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs
+/FP3000_PicoW/__vm
+/FP3000_PicoW/.vs/FP3000_PicoW
