--- a/FP3000_PicoW/FP3000_PicoW.vcxproj.filters
+++ b/FP3000_PicoW/FP3000_PicoW.vcxproj.filters
@@ -21,9 +21,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FP3000_PicoW.ino" />
+    <ClCompile Include="FP3000.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="__vm\.FP3000_PicoW.vsarduino.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FP3000.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
