--- a/FP3000_PicoW/FP3000_PicoW.vcxproj.filters
+++ b/FP3000_PicoW/FP3000_PicoW.vcxproj.filters
@@ -21,7 +21,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FP3000_PicoW.ino" />
-    <ClCompile Include="FP3000.cpp">
+    <ClCompile Include="src\FP3000.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -29,7 +29,10 @@
     <ClInclude Include="__vm\.FP3000_PicoW.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="FP3000.h">
+    <ClInclude Include="src\FP3000.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Config.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
