--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ FP3000_PicoW/__vm/Configuration.Debug.vmps.xml
 FP3000_PicoW/__vm/Upload.vmps.xml
 FP3000_PicoW/FP3000_PicoW.vcxproj
 FP3000_PicoW/FP3000_PicoW.vcxproj.filters
+.vs/FoodPump3000/FileContentIndex/6ab3a10d-de1e-4611-9f07-eb48d22240cc.vsidx
+.vs/FoodPump3000/v17/.suo
+.vs/FoodPump3000/v17/Browse.VC.db
+.vs/FoodPump3000/v17/ipch/AutoPCH/59fcf1d21a7b4a4e/FP3000.ipch
+.vs/FoodPump3000/v17/ipch/AutoPCH/7c99888b793ba7ea/FP3000_PICOW.ipch
+.vs/FoodPump3000/v17/Solution.VC.db
